--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1 class="title">야호~~~~</h1>
+  <h1 class="title">localhost : 80 </h1>
+  <a href="Main.html">Main</a>
+  <a href="bom_add.html">bom_add</a>
 </body>
 </html>
