--- a/static/popup_layer1.html
+++ b/static/popup_layer1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>popup_layer</title>
-    <link rel="stylesheet" href="/css/popup_layer1.css">
+    <link rel="stylesheet" href="./css/popup_layer1.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script>
     $(document).ready(function(){
